RefundController: se puede ver y devolver "dinero" al usuario

--- a/admin/app/views/user_transactions.scala.html
+++ b/admin/app/views/user_transactions.scala.html
@@ -1,4 +1,4 @@
-@(user: model.User, transactions: List[model.accounting.AccountingOp])
+@(user: model.User, transactions: List[model.accounting.AccountingTran])
 
 @import model._
 @import controllers.admin.routes.DashboardController
