--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -67,6 +67,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="@AdminController.lobby">Lobby</a></li>
                 <li><a href="@UserController.index">Users</a></li>
+                <li><a href="@RefundController.index">Refunds</a></li>
                 <li><a href="@PointsTranslationController.index">Points Translations</a></li>
                 <li><a href="@ContestController.index">Contests</a></li>
             </ul>
