refund_list: link al histórico de transacciones del usuario

--- a/admin/app/views/refund_list.scala.html
+++ b/admin/app/views/refund_list.scala.html
@@ -28,6 +28,12 @@
                     }
                 ],
                  "columnDefs": [ {
+                    "targets": 2,
+                    "mRender": function (data, type, full) {
+                        return '<a href="user/' + data + '/transactions">' + data + '</a>';
+                    }
+                },
+                {
                     "targets": 5,
                     "mRender": function (data, type, full) {
                         if (data != "COMPLETED")
