--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,15 +1,13 @@
 @(competitions_enabled : List[model.opta.OptaCompetition])
 
-@import controllers.admin.AdminController
-
 @import controllers.admin.routes._
+
 
 @scripts = {
 <script type="text/javascript" charset="utf-8">
 
 $(document).ready(function() {
     getMongo();
-
 });
 
 function setOverlay() {
@@ -64,15 +62,20 @@ function getMongo() {
         <option value="dailysoccer">Epic Eleven</option>
     </select>
 
-    @if(AdminController.isLocalMongo()) {
-    <div style="float: right; margin-right:100px;">
-        <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
-        @if(competitions_enabled.isEmpty) {
-            <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
-        } else {
-            <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
-        }
-    </div>
+    @* Hay que hacer la ruta explicita a la funcion porque si no tienes que hacer un @import controllers.admin.DashboardController
+      y esto provoca que no resuelva bien las llamadas posteriores al "router inverso": Realmente hace una llamada a la funcion
+      en los href!! *@
+    @if(controllers.admin.DashboardController.isLocalMongo()) {
+        <div style="float: right; margin-right:100px;">
+
+            <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
+
+            @if(competitions_enabled.isEmpty) {
+                <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
+            } else {
+                <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
+            }
+        </div>
     }
 </div>
 <br/>
@@ -96,7 +99,5 @@ function getMongo() {
 
 <br/>
 <br/>
-
-
 
 }
