--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -1,6 +1,5 @@
 @()
 
-@import controllers.admin.DashboardController
 @import model._
 @import controllers.admin.routes._
 
@@ -56,7 +55,7 @@
 
 <a href="@TemplateContestController.newForm"><button class="btn btn-success">Add Contest</button></a>
 
-@if(DashboardController.isLocalMongo()) {
+@if(model.Model.isLocalMongoAppEnv()) {
 <div style="float: right; margin-right:100px;">
     <a href="@TemplateContestController.createAll"><button class="btn btn-danger">Create All Contests</button></a>
 </div>
