--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -62,7 +62,7 @@
                 <li><a href="@DashboardController.index">Dashboard</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="@AdminController.lobby">Lobby</a></li>
+                <li><a href="@LobbyController.lobby">Lobby</a></li>
                 <li><a href="@UserController.index">Users</a></li>
                 <li><a href="@RefundController.index">Refunds</a></li>
                 <li><a href="@PointsTranslationController.index">Points Translations</a></li>
