--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,4 +1,4 @@
-@(competitionsEnabled : List[model.opta.OptaCompetition] )
+@(competitions_enabled : List[model.opta.OptaCompetition], botActorsStarted : Boolean)
 
 @import controllers.admin.routes._
 
@@ -67,7 +67,7 @@ function getMongo() {
 
             <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
 
-            @if(competitionsEnabled.isEmpty) {
+            @if(competitions_enabled.isEmpty) {
                 <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
             } else {
                 <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
@@ -75,26 +75,43 @@ function getMongo() {
         </div>
     }
 </div>
+
 <br/>
+
 <div>
     <p><a href="@OptaController.optaCompetitions" class="btn btn-primary">Select Competitions</a></p>
-    @if(competitionsEnabled.isEmpty) {
+    @if(competitions_enabled.isEmpty) {
         <span class="bg-danger text-danger" style="padding:5px">&#8999; Ninguna Competición</span>
     } else {
-        @for((p, index) <- competitionsEnabled.zipWithIndex) {
+        @for((p, index) <- competitions_enabled.zipWithIndex) {
             <p><em class="bg-success text-primary" style="margin:35px; padding:5px">&#10003; @p.competitionName/@p.seasonId</em></p>
         }
     }
 </div>
+
 <br/>
+
 <div>
-    <p><a class="btn btn-primary" href="@ExcelController.index" title="Excel Import/Export">
+    <a class="btn btn-primary" href="@ExcelController.index" title="Excel Import/Export">
         Salaries Import/Export
-    </a></p>
+    </a>
+</div>
+
+<br/>
+
+<div>
     <a href="@ImportController.showImportTeams" class="btn btn-warning">Opta Import Log</a>
 </div>
 
 <br/>
-<br/>
 
+@if(model.Model.isLocalMongoAppEnv()) {
+    <div>
+    @if(botActorsStarted) {
+        <a href="@DashboardController.switchBotActors(false)" class="btn btn-primary">Stop Bots</a>
+    } else {
+        <a href="@DashboardController.switchBotActors(true)" class="btn btn-warning">Start Bots</a>
+    }
+    </div>
+}
 }
