Si es un log, no es un btn-warning

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -100,7 +100,7 @@ function getMongo() {
 <br/>
 
 <div>
-    <a href="@ImportController.showImportTeams" class="btn btn-warning">Opta Import Log</a>
+    <a href="@ImportController.showImportTeams" class="btn btn-primary">Opta Import Log</a>
 </div>
 
 <br/>
