--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -4,7 +4,7 @@
 @import controllers.admin.routes
 
 
-@if(model.Model.isLocalMongoAppEnv()) {
+@if(model.Model.isLocalHostTargetEnvironment()) {
 <div class="navbar navbar-fixed-bottom" style="background: #ededed; border-top: 1px solid #ccc">
     <div class="container-fluid">
         <div class="navbar-collapse collapse">
