--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -32,7 +32,7 @@ function setMongo() {
         var new_mongo = $('#mongo-conn').val();
         setOverlay();
         var another_temp = $.ajax({
-                        url: "/admin/setmongo/"+new_mongo,
+                        url: "/admin/set_target_environment/"+new_mongo,
                         success: function (result) {
                             location.reload();
                         }
@@ -41,7 +41,7 @@ function setMongo() {
 
 function getMongo() {
     var temp = $.ajax({
-                    url: "/admin/getmongo",
+                    url: "/admin/get_target_environment",
                     success: function (result) {
                         $('#mongo-conn option[value="'+result+'"]').prop('selected', true);
                     }
@@ -57,12 +57,12 @@ function getMongo() {
 
 <div>
     <select id="mongo-conn" onchange="setMongo()" class="form-control" style="width: inherit; display: inline-block;">
-        <option value="localhost">Localhost</option>
-        <option value="dailysoccer-staging">Staging</option>
-        <option value="dailysoccer">Epic Eleven</option>
+        <option value="LOCALHOST">Localhost</option>
+        <option value="STAGING">Staging</option>
+        <option value="PRODUCTION">Epic Eleven</option>
     </select>
 
-    @if(model.Model.isLocalMongoAppEnv()) {
+    @if(model.Model.isLocalHostTargetEnvironment()) {
         <div style="float: right; margin-right:100px;">
 
             <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
@@ -105,7 +105,7 @@ function getMongo() {
 
 <br/>
 
-@if(model.Model.isLocalMongoAppEnv()) {
+@if(model.Model.isLocalHostTargetEnvironment()) {
     <div>
     @if(botActorsStarted) {
         <a href="@DashboardController.switchBotActors(false)" class="btn btn-primary">Stop Bots</a>
