--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -10,7 +10,7 @@
 
 <a href="@PointsTranslationController.newForm"><button class="btn btn-success">New points for Event</button></a>
 
-@if(model.Model.isLocalMongoAppEnv()) {
+@if(model.Model.isLocalHostTargetEnvironment()) {
 <div style="float: right; margin-right:100px;">
     <a href="@PointsTranslationController.resetToDefault"><button class="btn btn-danger">Reset points to Default</button></a>
     <a href="@OptaController.updateOptaEvents"><button class="btn btn-danger">Recalculate points for all OptaEvents</button></a>
