--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -55,7 +55,7 @@
 
 <a href="@TemplateContestController.newForm"><button class="btn btn-success">Add Contest</button></a>
 
-@if(model.Model.isLocalMongoAppEnv()) {
+@if(model.Model.isLocalHostTargetEnvironment()) {
 <div style="float: right; margin-right:100px;">
     <a href="@TemplateContestController.createAll"><button class="btn btn-danger">Create All Contests</button></a>
 </div>
