--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,4 +1,4 @@
-@(competitions_enabled : List[model.opta.OptaCompetition], botActorsStarted : Boolean)
+@(competitions_enabled : List[model.opta.OptaCompetition], botActorsStarted : Boolean, botActorsText : String)
 
 @import controllers.admin.routes._
 
@@ -119,9 +119,9 @@ function addMoney(amount) {
 
 <p>
 @if(botActorsStarted) {
-    <a href="@DashboardController.switchBotActors(false)" class="btn btn-primary">Stop Bots</a>
+    <a href="@DashboardController.switchBotActors(false)" class="btn btn-primary">@botActorsText</a>
 } else {
-    <a href="@DashboardController.switchBotActors(true)" class="btn btn-warning">Start Bots</a>
+    <a href="@DashboardController.switchBotActors(true)" class="btn btn-warning">@botActorsText</a>
 }
 </p>
 <select id="money-list" onchange="moneySelected = $('#money-list').val()" class="form-control" style="width: 130px; display: inline-block;">
