--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -130,4 +130,5 @@ function addMoney(target, amount) {
 <button id="add-money-bots" type="button" onclick="addMoney('bots', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Bots</button>
 <button id="add-money-tests" type="button" onclick="addMoney('tests', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Tests</button>
 
+<br/><br/><p><a href="http://localhost:15672/#/queues">Link de conveniencia a tu RabbitMQ local</a></p>
 }
