--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -65,8 +65,43 @@
 </div>
 }
 
+@scripts = {
+<script type="text/javascript">
 
-@main("Template Contest - Admin") {
+        function updatePrizes() {
+            var maxEntries = $('#maxEntries').val();
+            var entryFee = $('#entryFee').val();
+            var prizeType = $('#prizeType').val();
+
+            $("#prize-pool").text("("+(maxEntries * entryFee * 0.90).toFixed(2) + "€)");
+            $.ajax({
+                url: "/admin/template_contest/get_prizes/"+prizeType+"/"+maxEntries+"/"+entryFee,
+                success: function (result) {
+                    var prizes = "";
+                    jQuery.each(result, function(index, value) {
+                        prizes += (index+1) + "º: " + value + "€<br/>";
+                    });
+                    $("#prizes").html(prizes);
+                }
+            });
+        }
+
+        $(document).ready( function(){
+            $('#maxEntries').change(function(){
+                updatePrizes();
+            });
+            $('#entryFee').change(function(){
+                updatePrizes();
+            });
+            $('#prizeType').change(function(){
+                updatePrizes();
+            });
+        })
+
+    </script>
+}
+
+@main("Template Contest - Admin", scripts) {
 
 <h1 class="page-header">Template Contest</h1>
 
@@ -138,6 +173,10 @@
             )
 
             </form>
+
+            <h4>TABLA DE PREMIOS <span id="prize-pool"></span></h4>
+            <br/>
+            <div id="prizes"></div>
         </div>
 
         <div class="col-md-5">
