template_contest_add: se muestra el total de premios

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -78,9 +78,12 @@
                 url: "/admin/template_contest/get_prizes/"+prizeType+"/"+maxEntries+"/"+entryFee,
                 success: function (result) {
                     var prizes = "";
+                    var total = 0;
                     jQuery.each(result, function(index, value) {
                         prizes += (index+1) + "º: " + value + "€<br/>";
+                        total += value;
                     });
+                    prizes += "<br/>Total: " + total + "€";
                     $("#prizes").html(prizes);
                 }
             });
