--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -125,6 +125,7 @@ function addMoney(target, amount) {
                     Pause
                 }
             </a>
+            <a href="@DashboardController.stampedeBotActors()" class="btn btn-primary">Stampede!</a>
         } else {
             <a href="@DashboardController.startStopBotActors()" class="btn btn-warning">Start Bots</a>
         }
