--- a/common/app/views/email_contest_start.scala.html
+++ b/common/app/views/email_contest_start.scala.html
@@ -116,7 +116,7 @@
         <tbody>
         <tr>
             <td>
-                <table width="580" bgcolor="#0db9ea" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" hlitebg="edit" shadow="edit" style="background-image:url(http://www.epiceleven.com/images/emails/header.jpg); background-repeat:no-repeat;">
+                <table width="580" bgcolor="#0db9ea" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" hlitebg="edit" shadow="edit" style="background-image:url(http://www.epiceleven.com/images/header.jpg); background-repeat:no-repeat;">
                     <tbody>
                     <tr>
                         <td height="100">
