--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -1,34 +1,33 @@
-@import controllers.admin.SimulatorController
-@import controllers.admin.SnapshotController
+@(isCreated:Boolean, isPaused:Boolean, simulationDate:Date, pauseDate:Date, nextStepDesc:String)
 
 @import controllers.admin.routes
 
-
-@if(model.Model.isLocalHostTargetEnvironment()) {
 <div class="navbar navbar-fixed-bottom" style="background: #ededed; border-top: 1px solid #ccc">
     <div class="container-fluid">
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <div style="margin-top: 5px;"><a>Current Date:<span style="font-weight:700; margin-left: 0.50em;" id="time">@SimulatorController.getCurrentDate()</span></a></div>
-                    <div><a><span>Next Stop:</span><span style="font-weight:700;margin-left: 0.50em;position: absolute; right: 0px;" id="nextStop">@SimulatorController.getNextStop()</span></a></div>
+                    <div style="margin-top: 5px;"><a>Current Date:<span style="font-weight:700; margin-left: 0.50em;" id="time">@simulationDate</span></a></div>
+                    <div><a><span>Next Stop:</span><span style="font-weight:700;margin-left: 0.50em;position: absolute; right: 0px;" id="nextStop">@pauseDate</span></a></div>
                 </li>
-                <li><a>Next File Id:<span style="font-weight:700;margin-left: 0.20em;" id="nextStepDesc">@SimulatorController.getNextStepDesc()</span></a></li>
+                <li><a>Next File Id:<span style="font-weight:700;margin-left: 0.20em;" id="nextStepDesc">@nextStepDesc</span></a></li>
             </ul>
 
-            @if(SimulatorController.isSimulatorCreated()) {
-                <a class="btn btn-primary ajax switch" href="@routes.SimulatorController.switchSimulator">Off</a>
-            } else {
-                <a class="btn btn-primary ajax switch" href="@routes.SimulatorController.switchSimulator">On</a>
-            }
+            <a class="btn btn-primary ajax switch" href="@routes.SimulatorController.initShutdown">
+                @if(isCreated) {
+                    On
+                } else {
+                    Off
+                }
+            </a>
 
             <div class="btn-group" style="display:inline-block;">
 
-                @if(SimulatorController.isSimulatorPaused()) {
-                    <a class="btn btn-sim btn-primary ajax play" href="@routes.SimulatorController.start"
+                @if(isPaused) {
+                    <a class="btn btn-sim btn-primary ajax play" href="@routes.SimulatorController.pauseResume"
                        title="Starts the simulator at the beginning of time (the first date sent by Opta) or resumes execution from the current date.">Start</a>
                 } else {
-                    <a class="btn btn-sim btn-primary ajax pause" href="@routes.SimulatorController.pause">Pause</a>
+                    <a class="btn btn-sim btn-primary ajax pause" href="@routes.SimulatorController.pauseResume">Pause</a>
                 }
 
                 <a class="btn btn-sim btn-primary ajax forward" href="@routes.SimulatorController.nextStep"
@@ -55,144 +54,143 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
-        var is_paused = "@SimulatorController.isSimulatorPaused()";
-        var is_created = "@SimulatorController.isSimulatorCreated()";
+    var is_paused = "@isPaused";
+    var is_created = "@isCreated";
 
-        $(document).ready(function() {
-            getSpeed();
-            repaintButtons();
+    $(document).ready(function() {
+        getSpeed();
+        repaintButtons();
 
-            window.setInterval(checkReload, 200);
-        });
+        window.setInterval(checkReload, 200);
+    });
 
-        function changeSpeed() {
-            var new_speed = $('#sim-speed').val();
-            var another_temp = $.ajax({
-                            url: "/admin/simulator_speed/"+new_speed
-                        });
-        }
+    function changeSpeed() {
+        var new_speed = $('#sim-speed').val();
+        var another_temp = $.ajax({
+                        url: "/admin/simulator_speed/"+new_speed
+                    });
+    }
 
-        function getSpeed() {
-            var temp = $.ajax({
-                            url: "/admin/simulator_speed",
-                            success: function (result) {
-                                $('#sim-speed option[value="'+result+'"]').prop('selected', true);
-                            }
-                        });
-        }
+    function getSpeed() {
+        var temp = $.ajax({
+                        url: "/admin/simulator_speed",
+                        success: function (result) {
+                            $('#sim-speed option[value="'+result+'"]').prop('selected', true);
+                        }
+                    });
+    }
 
 
 
-        function repaintButtons() {
-            if (is_created == "true") {
-                $(".switch").text("Off")
-                $(".btn-sim").removeClass("disabled");
-                $("#sim-speed").prop("disabled", false);
-                
+    function repaintButtons() {
+        if (is_created == "true") {
+            $(".switch").text("Off")
+            $(".btn-sim").removeClass("disabled");
+            $("#sim-speed").prop("disabled", false);
 
-                if (is_paused == "false") {
-                    $(".btn-sim.play").attr("href", "/admin/pause_simulator");
-                    $(".btn-sim.play").text("Pause");
-                    $(".btn-sim.play").addClass("pause");
 
-                    $(".btn-sim.pause").removeClass("play");
+            if (is_paused == "false") {
+                $(".btn-sim.play").attr("href", "@routes.SimulatorController.pauseResume");
+                $(".btn-sim.play").text("Pause");
+                $(".btn-sim.play").addClass("pause");
 
-                    $(".btn-sim.forward").addClass("disabled");
-                    $(".btn-sim.forward").text("Next step");
+                $(".btn-sim.pause").removeClass("play");
 
-                    $(".btn-sim.fforward").addClass("disabled");
+                $(".btn-sim.forward").addClass("disabled");
+                $(".btn-sim.forward").text("Next step");
 
-                    $(".btn-sim").removeClass("btn-primary");
-                    $(".btn-sim").addClass("btn-success");
-                }
-                else {
-                    $(".btn-sim.pause").attr("href", "/admin/start_simulator");
-                    $(".btn-sim.pause").text("Play");
-                    $(".btn-sim.pause").addClass("play");
+                $(".btn-sim.fforward").addClass("disabled");
 
-                    $(".btn-sim.play").removeClass("pause");
-
-                    $(".btn-sim.forward").removeClass("disabled");
-                    $(".btn-sim.forward").text("Next step");
-
-                    $(".btn-sim.fforward").removeClass("disabled");
-
-                    $(".btn-sim").removeClass("btn-success");
-                    $(".btn-sim").addClass("btn-primary");
-                }
+                $(".btn-sim").removeClass("btn-primary");
+                $(".btn-sim").addClass("btn-success");
             }
             else {
-                $(".switch").text("On")
-                $(".btn-sim").addClass("disabled");
+                $(".btn-sim.pause").attr("href", "@routes.SimulatorController.pauseResume");
+                $(".btn-sim.pause").text("Play");
+                $(".btn-sim.pause").addClass("play");
+
+                $(".btn-sim.play").removeClass("pause");
+
+                $(".btn-sim.forward").removeClass("disabled");
+                $(".btn-sim.forward").text("Next step");
+
+                $(".btn-sim.fforward").removeClass("disabled");
 
                 $(".btn-sim").removeClass("btn-success");
                 $(".btn-sim").addClass("btn-primary");
-                $("#sim-speed").prop("disabled", true);
             }
         }
+        else {
+            $(".switch").text("On")
+            $(".btn-sim").addClass("disabled");
 
-        function updateFields() {
-            $("#time").load("/admin/current_date_simulator");
-            $("#nextStepDesc").load("/admin/next_step_desc_simulator");
-            $("#nextStop").load("/admin/next_stop_simulator");
-
-            getSpeed();
+            $(".btn-sim").removeClass("btn-success");
+            $(".btn-sim").addClass("btn-primary");
+            $("#sim-speed").prop("disabled", true);
         }
+    }
 
-        function checkReload() {
+    function updateFields() {
+        $("#time").load("/admin/current_date_simulator");
+        $("#nextStepDesc").load("/admin/next_step_desc_simulator");
+        $("#nextStop").load("/admin/next_stop_simulator");
 
-            updateFields();
+        getSpeed();
+    }
 
-            var temp =  $.ajax({
-                url: "/admin/is_created_simulator",
-                success: function(result) {
+    function checkReload() {
 
-                    if (result !== is_created) {
-                        is_created = result;
-                        repaintButtons();
-                    }
+        updateFields();
 
-                    if (is_created) {
-                        var another_temp = $.ajax({
-                            url: "/admin/is_paused_simulator",
-                            success: function(result) {
+        var temp =  $.ajax({
+            url: "/admin/is_created_simulator",
+            success: function(result) {
 
-                                if (result !== is_paused) {
-                                    is_paused = result;
-                                    repaintButtons();
-                                }
-                            }
-                        });
-                    }
+                if (result !== is_created) {
+                    is_created = result;
+                    repaintButtons();
                 }
-            });
-        }
 
-        $('.ajax').on('click', function(e) {
-            $(this).addClass('active');
-            e.preventDefault();
-            var myself = $(this);
-            $.ajax({
-                 url: $(this).attr('href'),
-                 complete: function(result) {
-                    myself.removeClass('active');
-                 }
-            });
+                if (is_created) {
+                    var another_temp = $.ajax({
+                        url: "/admin/is_paused_simulator",
+                        success: function(result) {
+
+                            if (result !== is_paused) {
+                                is_paused = result;
+                                repaintButtons();
+                            }
+                        }
+                    });
+                }
+            }
+        });
+    }
+
+    $('.ajax').on('click', function(e) {
+        $(this).addClass('active');
+        e.preventDefault();
+        var myself = $(this);
+        $.ajax({
+             url: $(this).attr('href'),
+             complete: function(result) {
+                myself.removeClass('active');
+             }
+        });
+    });
+
+    $('#date-pause-ok').click(function(){
+        var form = $('#date-pause-form');
+        $.ajax({
+          type: form.attr('method'),
+          url: form.attr('action'),
+          data: form.serialize()
+        }).done(function() {
+          // Optionally alert the user of success here...
+        }).fail(function() {
+          // Optionally alert the user of an error here...
         });
 
-        $('#date-pause-ok').click(function(){
-            var form = $('#date-pause-form');
-            $.ajax({
-              type: form.attr('method'),
-              url: form.attr('action'),
-              data: form.serialize()
-            }).done(function() {
-              // Optionally alert the user of success here...
-            }).fail(function() {
-              // Optionally alert the user of an error here...
-            });
-
-        });
+    });
 
 </script>
-}
