--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -1,4 +1,4 @@
-@(isCreated:Boolean, isPaused:Boolean, simulationDate:Date, pauseDate:Date, nextStepDesc:String)
+@(isCreated:Boolean, isPaused:Boolean, currentDate:String, pauseDate:String, speedFactor:Int)
 
 @import controllers.admin.routes
 
@@ -7,10 +7,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <div style="margin-top: 5px;"><a>Current Date:<span style="font-weight:700; margin-left: 0.50em;" id="time">@simulationDate</span></a></div>
+                    <div style="margin-top: 5px;"><a>Current Date:<span style="font-weight:700; margin-left: 0.50em;" id="time">@currentDate</span></a></div>
                     <div><a><span>Next Stop:</span><span style="font-weight:700;margin-left: 0.50em;position: absolute; right: 0px;" id="nextStop">@pauseDate</span></a></div>
                 </li>
-                <li><a>Next File Id:<span style="font-weight:700;margin-left: 0.20em;" id="nextStepDesc">@nextStepDesc</span></a></li>
             </ul>
 
             <a class="btn btn-primary ajax switch" href="@routes.SimulatorController.initShutdown">
@@ -42,7 +41,7 @@
                 <input type="datetime-local" value="2014-06-14T00:00" id="date-pause" name="date" class="form-control" style="display:inline-block">
             }
             <button id="date-pause-ok" name="date-pause-ok" type="button" class="btn btn-sim btn-primary fforward" style="position:relative;">Go to Date</button>
-            <select id="sim-speed" onchange="changeSpeed()" class="form-control" style="width: inherit; display: inline-block;">
+            <select id="sim-speed" onchange="changeSpeed()" class="form-control" style="width: inherit; display: inline-block;" >
                 <option value="-1">Max Speed</option>
                 <option value="3600">1 hour per second</option>
                 <option value="60">1 minute per second</option>
@@ -54,57 +53,37 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
-    var is_paused = "@isPaused";
-    var is_created = "@isCreated";
 
     $(document).ready(function() {
-        getSpeed();
-        repaintButtons();
+        // Lo pintamos la primera vez desde el cliente por ejemplo para settear correctamente el speedFactor
+        repaintInterface(@isCreated, @isPaused, "@currentDate", "@pauseDate", @speedFactor);
 
-        window.setInterval(checkReload, 200);
+        window.setInterval(refreshStateFromServer, 200);
     });
 
-    function changeSpeed() {
-        var new_speed = $('#sim-speed').val();
-        var another_temp = $.ajax({
-                        url: "/admin/simulator_speed/"+new_speed
-                    });
-    }
-
-    function getSpeed() {
-        var temp = $.ajax({
-                        url: "/admin/simulator_speed",
-                        success: function (result) {
-                            $('#sim-speed option[value="'+result+'"]').prop('selected', true);
-                        }
-                    });
+    function refreshStateFromServer() {
+        $.ajax({
+            dataType: "json",
+            url: "/admin/get_simulator_state",
+            success: function (result) {
+                repaintInterface(result.simulationDate != null, result.isPaused, result.currentDateFormatted, result.pauseDateFormatted, result.speedFactor);
+            }});
     }
 
 
+    function repaintInterface(is_created, is_paused, current_date, pause_date, speed_factor) {
 
-    function repaintButtons() {
-        if (is_created == "true") {
-            $(".switch").text("Off")
+        $("#time").text(current_date);
+        $("#nextStop").text(pause_date);
+        $('#sim-speed option[value="'+ speed_factor +'"]').prop('selected', true);
+
+        if (is_created) {
+
+            $(".switch").text("Off");
             $(".btn-sim").removeClass("disabled");
             $("#sim-speed").prop("disabled", false);
 
-
-            if (is_paused == "false") {
-                $(".btn-sim.play").attr("href", "@routes.SimulatorController.pauseResume");
-                $(".btn-sim.play").text("Pause");
-                $(".btn-sim.play").addClass("pause");
-
-                $(".btn-sim.pause").removeClass("play");
-
-                $(".btn-sim.forward").addClass("disabled");
-                $(".btn-sim.forward").text("Next step");
-
-                $(".btn-sim.fforward").addClass("disabled");
-
-                $(".btn-sim").removeClass("btn-primary");
-                $(".btn-sim").addClass("btn-success");
-            }
-            else {
+            if (is_paused) {
                 $(".btn-sim.pause").attr("href", "@routes.SimulatorController.pauseResume");
                 $(".btn-sim.pause").text("Play");
                 $(".btn-sim.pause").addClass("play");
@@ -119,9 +98,24 @@
                 $(".btn-sim").removeClass("btn-success");
                 $(".btn-sim").addClass("btn-primary");
             }
+            else {
+                $(".btn-sim.play").attr("href", "@routes.SimulatorController.pauseResume");
+                $(".btn-sim.play").text("Pause");
+                $(".btn-sim.play").addClass("pause");
+
+                $(".btn-sim.pause").removeClass("play");
+
+                $(".btn-sim.forward").addClass("disabled");
+                $(".btn-sim.forward").text("Next step");
+
+                $(".btn-sim.fforward").addClass("disabled");
+
+                $(".btn-sim").removeClass("btn-primary");
+                $(".btn-sim").addClass("btn-success");
+            }
         }
         else {
-            $(".switch").text("On")
+            $(".switch").text("On");
             $(".btn-sim").addClass("disabled");
 
             $(".btn-sim").removeClass("btn-success");
@@ -130,41 +124,10 @@
         }
     }
 
-    function updateFields() {
-        $("#time").load("/admin/current_date_simulator");
-        $("#nextStepDesc").load("/admin/next_step_desc_simulator");
-        $("#nextStop").load("/admin/next_stop_simulator");
 
-        getSpeed();
-    }
-
-    function checkReload() {
-
-        updateFields();
-
-        var temp =  $.ajax({
-            url: "/admin/is_created_simulator",
-            success: function(result) {
-
-                if (result !== is_created) {
-                    is_created = result;
-                    repaintButtons();
-                }
-
-                if (is_created) {
-                    var another_temp = $.ajax({
-                        url: "/admin/is_paused_simulator",
-                        success: function(result) {
-
-                            if (result !== is_paused) {
-                                is_paused = result;
-                                repaintButtons();
-                            }
-                        }
-                    });
-                }
-            }
-        });
+    function changeSpeed() {
+        var new_speed = $('#sim-speed').val();
+        var another_temp = $.ajax({ url: "/admin/simulator_speed/" + new_speed });
     }
 
     $('.ajax').on('click', function(e) {
