--- a/admin/app/views/snapshot.scala.html
+++ b/admin/app/views/snapshot.scala.html
@@ -11,7 +11,7 @@
     <div><strong>Last Snapshot</strong> (@SnapshotController.getSnapshotName()):</div>
     <br/>
     <div class="btn-group">
-        <a class="btn btn-primary" href="@routes.SnapshotController.loadSnapshot" onclick="onLoadSnapshotClick()" title="Load snapshot.">
+        <a class="btn btn-primary" href="@routes.SnapshotController.loadSnapshot" title="Load snapshot.">
             Load Snapshot
         </a>
         <a class="btn btn-primary" href="@routes.SnapshotController.saveSnapshot" title="Save snapshot.">
@@ -27,14 +27,4 @@
             Restore Snapshot from Disk
         </a>
     </div>
-
-    <script>
-        // Para evitar que llegue un get_simulator_state mientras se esta haciendo la carga del snapshot
-        function onLoadSnapshotClick() {
-            if (simulatorBarInterval !== null) {
-                window.clearInterval(simulatorBarInterval);
-                window.location.reload();
-            }
-        }
-    </script>
 }
