--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -82,10 +82,12 @@
                 <li><a href="@OptaController.optaMatchEvents">Opta Match Events</a></li>
                 <li><a href="@OptaController.optaEvents">Opta Events</a></li>
             </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="@SnapshotController.index">Snapshots</a></li>
-                <li><a href="@RefresherController.index">Refresh DB</a></li>
-            </ul>
+            @if(model.Model.isLocalHostTargetEnvironment) {
+                <ul class="nav nav-sidebar">
+                    <li><a href="@SnapshotController.index">Snapshots</a></li>
+                    <li><a href="@RefresherController.index">Refresh DB</a></li>
+                </ul>
+            }
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             @flash_message
