Enum-driven Salary caps

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -156,10 +156,14 @@
                 isActive
             )
 
-            @myInputText(
+            @mySelect(
                 templateContestForm("salaryCap"),
                 "Salary Cap",
-                10,
+                options(EnumUtils.toMap(classOf[SalaryCap])),
+                false,
+                1,
+                true,
+                "",
                 isActive
             )
 
