--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -66,6 +66,7 @@
                 <li><a href="@LobbyController.lobby">Lobby</a></li>
                 <li><a href="@UserController.index">Users</a></li>
                 <li><a href="@RefundController.index">Refunds</a></li>
+                <li><a href="@PromoController.index">Promos</a></li>
                 <li><a href="@PointsTranslationController.index">Points Translations</a></li>
                 <li><a href="@ContestController.index">Contests</a></li>
             </ul>
