--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -89,6 +89,9 @@
                     <li><a href="@RefresherController.index">Refresh DB</a></li>
                 </ul>
             }
+            <ul class="nav nav-sidebar">
+                <li><a href="@MigrationsController.index">Migrations</a></li>
+            </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             @flash_message
