--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -32,7 +32,7 @@
 <h1 class="page-header">Template Contest</h1>
 <h2 class="sub-header">@template_contest.name  @template_state</h2>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="table_id" class="table table-striped">
         <thead>
         <tr>
             <!--th>Id</th-->
